implement Spotless and fix warnings